test/resources/parser/passing/ExtTuplePattern0.scala
object TuplePattern {
  val a: (Int, String) = (1, "hi!");
  a match {
    case (_, x) => Std.printString(x)
  }
}